Bug 1747196 - Build the Web MIDI midir backend only on known supported platforms rather than excluding unsupported ones r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D134491