toolkit/library/rust/shared/lib.rs
@@ -79,16 +79,13 @@ extern crate localization_ffi;
 #[cfg(not(target_os = "android"))]
 extern crate viaduct;
 
-#[cfg(not(target_os = "android"))]
-extern crate midir;
-
-#[cfg(not(target_os = "android"))]
-extern crate midir_impl;
-
 extern crate gecko_logger;
 
 #[cfg(feature = "oxidized_breakpad")]
 extern crate rust_minidump_writer_linux;
+
+#[cfg(feature = "webmidi_midir_impl")]
+extern crate midir_impl;
 
 extern crate log;
 use log::info;
